--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,9 @@
   display: flex;
   justify-content: space-around;
 }
+
+.stackPile{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
